Testa can specify whether their task can be interrupted or not - fixes some issues with Tests using GraphDB, which doesn't like interrupts